# meteothek

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_xrboots.py
SCM6/: LICENSE  README.md  __init__.py
meteothek/: __init__.py  draw.py  proj.py  read.py  util.py
meteothek/calc/: __init__.py  fractions.py
meteothek/xrboots/: __init__.py  xrboots.py
